# penguins-eggs

./: +=  .appimage.yaml  .babelrc  .editorconfig  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .gitmodules  .golangci.yml  .grant.yaml  .node  .npmignore  .npmrc  .oclif.manifest.json  .yamllint.yaml  1.ci.caller.sh  10000-ubuntu-ci-server.sh  10001-build-packages-debs.sh  10001-debian12-container-test.sh  10001-ubuntu2404-vm-test.sh  10002-ubuntu2404-container-test-install.sh  10002-ubuntu2404-container-test.sh  10003-archlinux-container-test.sh  10003-debian12-container-test-install.sh  10003-debian12-container-test.sh  10004-almalinux-container-test.sh  10004-almalinux9-container-test-install.sh  10004-almalinux9-container-test.sh  10005-alpine-container-test.sh  10005-alpine3-container-test-install.sh  10005-alpine3-container-test.sh  10006-archlinux-container-test-install.sh  10006-archlinux-container-test.sh  10007-devuan5-container-test.sh  10008-debian12-container-test.sh  10008-opensuse-tumbleweed-container-test.sh  10009-openmamba-container-test.sh  1001.ubuntu.latest.build.test.sh  10010-rockylinux9-container-test.sh  (+235 more)
coa/: m  (+3 more)
integrations/penguins-distrobuilder/menu/: LICENSE  README.md  pyproject.toml
integrations/penguins-distrobuilder/menu/.github/workflows/: gitleaks.yaml  publish-to-pypi.yaml  pylint.yaml
integrations/penguins-distrobuilder/menu/examples/cloudinit/user-data/: ubuntu-gitlab.yaml
integrations/penguins-distrobuilder/menu/examples/files/alpine-abuild/cloudinit-per-once/: abuild.sh
integrations/penguins-distrobuilder/menu/examples/files/alpine-abuild/home/alpine/: .gitconfig  .profile  .vimrc
integrations/penguins-distrobuilder/menu/examples/files/alpine-base/etc/: nanorc
integrations/penguins-distrobuilder/menu/examples/files/alpine-base/etc/apk/: repositories
integrations/penguins-distrobuilder/menu/examples/files/alpine-base/etc/crontabs/: root
integrations/penguins-distrobuilder/menu/examples/files/ubuntu-base/root/: .bashrc  .nanorc
integrations/penguins-distrobuilder/menu/examples/files/ubuntu-gitlab/root/: .bash_aliases
integrations/penguins-distrobuilder/menu/examples/templates/custom/: ubuntu-podman.yaml
integrations/penguins-distrobuilder/menu/examples/templates/overrides/: alpine-abuild.yaml  ubuntu-base.yaml  ubuntu-gitlab.yaml
integrations/penguins-distrobuilder/menu/src/distrobuilder_menu/: app.py  builder.py  templates.py
integrations/penguins-distrobuilder/menu/src/distrobuilder_menu/api/: singleton.py  spinner.py
integrations/penguins-distrobuilder/menu/src/distrobuilder_menu/config/: user.py
integrations/penguins-distrobuilder/menu/src/distrobuilder_menu/menus/: cloudinit.py  common.py  shared.py
integrations/penguins-recovery/builders/arch/easy-language-config/: Cargo.toml  build-and-install.sh
integrations/penguins-recovery/builders/arch/easy-language-config/assets/: language-codes_csv.csv  locales.csv  timezones.txt
integrations/penguins-recovery/builders/arch/easy-language-config/src/: main.rs
integrations/penguins-recovery/gui/base/: CMakeLists.txt  README.md
integrations/penguins-recovery/gui/base/components/: CMakeLists.txt  fullscreenoverlay.cpp  fullscreenoverlay.h  startupnotifier.cpp  startupnotifier.h
integrations/penguins-recovery/gui/base/components/qml/: StartupFeedback.qml
integrations/penguins-recovery/gui/base/shell/: Messages.sh  metadata.json
integrations/penguins-recovery/gui/base/shell/contents/: defaults  layout.js  loader.qml
integrations/penguins-recovery/gui/base/shell/contents/applet/: AppletError.qml  CompactApplet.qml  DefaultCompactRepresentation.qml
integrations/penguins-recovery/gui/base/shell/contents/configuration/: AppletConfiguration.qml  ConfigCategoryDelegate.qml  ConfigurationContainmentAppearance.qml  ContainmentConfiguration.qml
integrations/penguins-recovery/gui/base/shell/contents/explorer/: AppletDelegate.qml  WidgetExplorer.qml
integrations/penguins-recovery/gui/base/shell/contents/views/: Desktop.qml  Panel.qml
integrations/penguins-recovery/gui/profiles/touch/homescreen/folio/: CMakeLists.txt  Messages.sh  README.md  applicationlistmodel.cpp  applicationlistmodel.h  delegatetoucharea.cpp  delegatetoucharea.h  dragstate.cpp  dragstate.h  favouritesmodel.cpp  favouritesmodel.h  folioapplication.cpp  folioapplication.h  folioapplicationfolder.cpp  folioapplicationfolder.h  foliodelegate.cpp  foliodelegate.h  foliosettings.cpp  foliosettings.h  foliowidget.cpp  foliowidget.h  homescreen.cpp  homescreen.h  homescreenstate.cpp  homescreenstate.h  pagelistmodel.cpp  pagelistmodel.h  pagemodel.cpp  pagemodel.h  widgetcontainer.cpp  widgetcontainer.h  widgetsmanager.cpp  widgetsmanager.h  windowlistener.cpp  windowlistener.h
integrations/penguins-recovery/gui/profiles/touch/homescreen/halcyon/: CMakeLists.txt  Messages.sh  homescreen.cpp  homescreen.h
integrations/penguins-recovery/gui/profiles/touch/quicksettings/: CMakeLists.txt  Messages.sh  enum.h  flashlightutil.cpp  flashlightutil.h  metadata.json  nightcolorsettings.kcfg  nightcolorsettings.kcfgc  nightcolorutil.cpp  nightcolorutil.h  plasma_mobile_quicksetting_screenshot.notifyrc  powermenuutil.cpp  powermenuutil.h  qmldir  screenshotplugin.cpp  screenshotplugin.h  screenshotutil.cpp  screenshotutil.h
integrations/penguins-recovery/gui/profiles/touch/quicksettings/package/: metadata.json
integrations/penguins-recovery/recovery-manager/: Cargo.toml  README.md
integrations/penguins-recovery/recovery-manager/src/: checksum.rs  lib.rs  misc.rs
integrations/penguins-recovery/recovery-manager/src/recovery/: errors.rs  mod.rs  version.rs
integrations/penguins-recovery/recovery-manager/src/repair/: crypttab.rs  fstab.rs  misc.rs  mod.rs  packaging.rs
py_oa_tools/: build_python_bundle.sh  coa.py  oa.py  pyproject.toml  setup.cfg
py_oa_tools/brain.d/: common.bash.tmpl
py_oa_tools/brain.d/modules/: arch.bash.tmpl  debian.bash.tmpl  fedora.bash.tmpl  manjaro.bash.tmpl
py_oa_tools/pkg/: builder.py  cmd.py  engine.py  exporter.py  pilot.py  template_renderer.py  utils.py
(+4793 files in other folders)
