[project]
name = "py-oa-tools"
version = "0.1.0"
description = "Python rewrite of oa-tools core coordinator and engine"
authors = [
  { name = "oa-tools Python Rewriter" }
]
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0"
]

[project.scripts]
pycoa = "py_oa_tools.coa:main"
pyoa = "py_oa_tools.oa:main"
