[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"examples" = "distrobuilder_menu/examples"

[project]
name = "distrobuilder_menu"
version = "0.2.9"
authors = [
  { name="Stuart Cardall", email="developer@it-offshore.co.uk" },
]
description = "A console frontend for Distrobuilder to build custom LXD / LXC images"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml", "urllib3"
]

[project.scripts]
dbmenu = "distrobuilder_menu.app:main"

[project.urls]
"Homepage" = "https://github.com/itoffshore/distrobuilder-menu"
"Bug Tracker" = "https://github.com/itoffshore/distrobuilder-menu/issues"
