[package]
name = "penguins-recovery-manager"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Recovery partition management extracted from pop-os/upgrade. Handles recovery partition detection, ISO fetching, checksum verification, and system repair (fstab, crypttab, packaging)."

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
proc-mounts = "0.3"
sys-mount = "3"
tempfile = "3"
hex = "0.4"
sha2 = "0.10"
digest = "0.10"
async-fetcher = "0.11"
async-shutdown = "0.2"
futures = "0.3"
rustix = "0.38"
os-release = "0.1"
fomat-macros = "0.3"
cascade = "1"
bitflags = "2"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
